# vecmin

./: Cargo.toml  README.md
src/: lib.rs  smallvec.rs  vec.rs
