[package]
authors = ["Raphael L. <raphael.j.larsen@gmail.com>"]
categories = ["data-structures", "no-std"]
description = "Provides a VecMin and VecOne newtype wrapper around Vec that enforces a minimum length at compile time."
documentation = "https://docs.rs/vecmin"
edition = "2024"
homepage = "https://github.com/larsraph/vecmin"
keywords = ["vec", "min", "one", "length", "non-empty"]
license = "Apache-2.0"
name = "vecmin"
readme = "README.md"
repository = "https://github.com/larsraph/vecmin"
rust-version = "1.87"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.228", features = ["alloc"], default-features = false, optional = true }

[features]
serde = ["dep:serde"]
